# filebox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NEWS.md  NOTICE  NOTICE.csv  README.md  index.html
.github/workflows/: pages.yml  release.yml
crates/: README.md
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  config_store.rs  connection.rs  dir_cache.rs  fs.rs  main.rs  resources.rs  search.rs  sysinfo.rs
crates/hub/: Cargo.toml
crates/hub/src/: agent_registry.rs  auth.rs  config.rs  events.rs  fs_proxy.rs  health.rs  main.rs  net.rs  routes.rs  search_proxy.rs  state.rs  ws.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: agent.rs  denylist.rs  lib.rs  message.rs  resources.rs  search.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
docs/: local-debugging.md
frontend/: NOTICE  NOTICE.csv  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  monacoSetup.ts  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: AboutDialog.tsx  AddressBar.tsx  AgentSettings.tsx  BackendList.tsx  CollectionItemList.tsx  CollectionPicker.tsx  CollectionsView.tsx  CsvPreview.tsx  DateFilterControl.tsx  DirectoryTree.tsx  FileBrowser.tsx  FileDownloadLink.tsx  FileEntryList.tsx  HealthPanel.tsx  HtmlPreview.tsx  ImagePreview.tsx  Login.tsx  MarkdownPreview.tsx  NoAgentSelected.tsx  PdfPreview.tsx  PinnedFolders.tsx  PreviewErrorBoundary.tsx  PreviewPane.tsx  PreviewWorkspace.tsx  RootManager.tsx  SystemStats.tsx  TextPreview.tsx  WorkspaceSearch.tsx  WorkspaceSplit.tsx  fileListShared.tsx  icons.tsx  previewShared.tsx
frontend/src/hooks/: usePreviewTabs.ts
frontend/src/state/: events.ts  health.ts  session.ts  useIsMobile.ts
scripts/: README.md  gen_config.sh  gen_notice.sh  install_agent.sh  install_hub.sh  release.sh  serve_at_client.sh  serve_at_server.sh
