[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/hub",
    "crates/agent",
]

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-tungstenite = { version = "0.26" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
filebox-protocol = { path = "crates/protocol" }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
async-stream = "0.3"
bcrypt = "0.19"
toml = "0.8"
sysinfo = "0.35"
tempfile = "3"
