[package]
name = "filebox-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
filebox-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
dirs = "6"
reqwest = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
