[package]
name = "filebox-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
filebox-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
dirs = "6"
reqwest = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
filebox-updater = { path = "../updater" }
# In-process fd/rg substitutes — no system binaries required.
ignore = "0.4"
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
