[package]
name = "filebox-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
filebox-protocol = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
