[package]
name = "filebox-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
filebox-protocol = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-stream = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
filebox-updater = { path = "../updater" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
